--- a/Cloud News/Controllers/ReaderNewsDetailViewController.xib
+++ b/Cloud News/Controllers/ReaderNewsDetailViewController.xib
@@ -82,6 +82,7 @@
                                 </label>
                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="news text" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="Mnt-cZ-3Yo">
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <inset key="scrollIndicatorInsets" minX="0.0" minY="0.0" maxX="-1" maxY="0.0"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 </textView>
