--- a/Cloud News/Controllers/ArticleEditorViewController.xib
+++ b/Cloud News/Controllers/ArticleEditorViewController.xib
@@ -14,6 +14,7 @@
                 <outlet property="btnSave" destination="hO6-7y-5UK" id="98q-du-AiD"/>
                 <outlet property="btnSubmit" destination="Tcf-qx-CyY" id="Yte-zK-ahh"/>
                 <outlet property="contents" destination="Dlk-hq-Ahg" id="cp4-K3-7jS"/>
+                <outlet property="imageIndicator" destination="Nqe-6J-YWO" id="Ubt-EP-rDn"/>
                 <outlet property="imageView" destination="EEk-v6-Sm8" id="cN5-4a-G88"/>
                 <outlet property="labelCreated" destination="adL-JA-J4P" id="gkw-Hq-g66"/>
                 <outlet property="labelUpdated" destination="Mjk-0D-k5b" id="K9p-M9-Jn3"/>
@@ -88,16 +89,11 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" delaysContentTouches="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Dlk-hq-Ahg">
+                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" delaysContentTouches="NO" text="&lt;Write your article here&gt;" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Dlk-hq-Ahg">
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="375" id="daf-s3-AMg"/>
                                     </constraints>
-                                    <string key="text">Lorem fistrum ahorarr apetecan a peich la caidita hasta luego Lucas mamaar ahorarr jarl. A wan mamaar a peich a gramenawer pecador quietooor no puedor. Diodeno la caidita ese pedazo de quietooor a peich hasta luego Lucas diodeno llevame al sircoo pecador diodenoo. Al ataquerl qué dise usteer me cago en tus muelas a wan te voy a borrar el cerito sexuarl amatomaa tiene musho peligro qué dise usteer sexuarl. Jarl pupita va usté muy cargadoo no te digo trigo por no llamarte Rodrigor va usté muy cargadoo pecador diodeno al ataquerl diodenoo. No puedor a peich por la gloria de mi madre a peich quietooor. Está la cosa muy malar va usté muy cargadoo ahorarr de la pradera va usté muy cargadoo ese hombree. Te va a hasé pupitaa está la cosa muy malar llevame al sircoo llevame al sircoo benemeritaar torpedo. Diodeno te voy a borrar el cerito diodenoo quietooor.
-
-Te voy a borrar el cerito de la pradera caballo blanco caballo negroorl ese que llega está la cosa muy malar benemeritaar pecador diodenoo al ataquerl hasta luego Lucas sexuarl. Al ataquerl benemeritaar ahorarr me cago en tus muelas. De la pradera pecador benemeritaar te va a hasé pupitaa torpedo. Ese hombree benemeritaar apetecan la caidita apetecan te va a hasé pupitaa. Me cago en tus muelas va usté muy cargadoo a wan ahorarr ese pedazo de torpedo mamaar quietooor. Va usté muy cargadoo a peich me cago en tus muelas no te digo trigo por no llamarte Rodrigor se calle ustée ese hombree.
-
-Se calle ustée diodeno se calle ustée qué dise usteer mamaar papaar papaar diodenoo la caidita sexuarl ese hombree está la cosa muy malar. La caidita a wan no puedor diodeno llevame al sircoo pecador. Diodeno sexuarl va usté muy cargadoo hasta luego Lucas torpedo va usté muy cargadoo qué dise usteer quietooor al ataquerl fistro. Pecador amatomaa a wan al ataquerl a wan. Quietooor no te digo trigo por no llamarte Rodrigor apetecan diodenoo.</string>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 </textView>
@@ -106,6 +102,9 @@ Se calle ustée diodeno se calle ustée qué dise usteer mamaar papaar papaar di
                                         <constraint firstAttribute="width" secondItem="EEk-v6-Sm8" secondAttribute="height" multiplier="9:5" id="klh-Ky-TCb"/>
                                     </constraints>
                                 </imageView>
+                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Nqe-6J-YWO">
+                                    <color key="color" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                </activityIndicatorView>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
@@ -132,10 +131,12 @@ Se calle ustée diodeno se calle ustée qué dise usteer mamaar papaar papaar di
                                 <constraint firstItem="adL-JA-J4P" firstAttribute="top" secondItem="sRc-I8-Z7D" secondAttribute="bottom" constant="8" id="dpY-S4-KRk"/>
                                 <constraint firstItem="Mjk-0D-k5b" firstAttribute="top" secondItem="adL-JA-J4P" secondAttribute="bottom" constant="8" id="jCA-zx-o4b"/>
                                 <constraint firstItem="GVU-FF-kMG" firstAttribute="top" secondItem="EEk-v6-Sm8" secondAttribute="bottom" constant="4" id="nYm-bB-QEe"/>
+                                <constraint firstItem="Nqe-6J-YWO" firstAttribute="centerX" secondItem="EEk-v6-Sm8" secondAttribute="centerX" id="phY-Mo-kM0"/>
                                 <constraint firstItem="EEk-v6-Sm8" firstAttribute="top" secondItem="LGp-aS-QDR" secondAttribute="bottom" constant="8" id="qdg-Sl-USG"/>
                                 <constraint firstItem="sRc-I8-Z7D" firstAttribute="leading" secondItem="WGg-eu-urw" secondAttribute="leading" constant="8" id="qjF-pj-vIC"/>
                                 <constraint firstItem="GVU-FF-kMG" firstAttribute="leading" secondItem="WGg-eu-urw" secondAttribute="leading" constant="8" id="qxO-Dz-tgn"/>
                                 <constraint firstItem="LGp-aS-QDR" firstAttribute="leading" secondItem="WGg-eu-urw" secondAttribute="leading" constant="8" id="reF-MJ-ITs"/>
+                                <constraint firstItem="Nqe-6J-YWO" firstAttribute="centerY" secondItem="EEk-v6-Sm8" secondAttribute="centerY" id="vLX-EI-xiD"/>
                                 <constraint firstItem="iED-W6-8Ue" firstAttribute="top" secondItem="WGg-eu-urw" secondAttribute="top" constant="8" id="zCD-53-cw2"/>
                             </constraints>
                         </view>
@@ -183,7 +184,7 @@ Se calle ustée diodeno se calle ustée qué dise usteer mamaar papaar papaar di
                 <constraint firstItem="U43-DX-zCn" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="t58-Ej-WEo"/>
                 <constraint firstItem="WGg-eu-urw" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" priority="250" id="wo1-FY-OXu"/>
             </constraints>
-            <point key="canvasLocation" x="-562" y="-297"/>
+            <point key="canvasLocation" x="-1173" y="-310"/>
         </view>
     </objects>
     <resources>
