--- a/Cloud News/Controllers/WriterArticlesViewController.xib
+++ b/Cloud News/Controllers/WriterArticlesViewController.xib
@@ -17,7 +17,7 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jSr-DE-YUd">
@@ -27,19 +27,19 @@
                         </tableView>
                         <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UjU-vW-80o">
                             <items>
-                                <barButtonItem title="Draft" id="pgw-nh-3gX">
+                                <barButtonItem enabled="NO" title="Draft" id="pgw-nh-3gX">
                                     <connections>
                                         <action selector="btnDraftAction:" destination="-1" id="4BS-Rd-bVt"/>
                                     </connections>
                                 </barButtonItem>
                                 <barButtonItem style="plain" systemItem="flexibleSpace" id="RyU-dk-w6o"/>
-                                <barButtonItem title="Submitted" id="DNh-86-zNb">
+                                <barButtonItem enabled="NO" title="Submitted" id="DNh-86-zNb">
                                     <connections>
                                         <action selector="btnSubmittedAction:" destination="-1" id="iSn-oR-nDK"/>
                                     </connections>
                                 </barButtonItem>
                                 <barButtonItem style="plain" systemItem="flexibleSpace" id="bHf-Lk-tKq"/>
-                                <barButtonItem title="Published" id="otm-5Y-FVP">
+                                <barButtonItem enabled="NO" title="Published" id="otm-5Y-FVP">
                                     <connections>
                                         <action selector="btnPublishedAction:" destination="-1" id="LSm-SW-xOC"/>
                                     </connections>
